fix(index.css,anonimo.css y paginacion.php): agrega .button--page--right, agrega gap al .content anonimo y cambia height a min-height en .reading_body

--- a/public/styles/anonimo.css
+++ b/public/styles/anonimo.css
@@ -9,6 +9,7 @@
 
 .content {
     padding: 0rem 2rem 2rem;
+    gap: 1rem;
 }
 
 .content__title {
